# OpenArm

./: .gitignore  README.md  openarm_bimanual.urdf  openarm_bimanual_control.urdf  openarm_bimanual_sim.urdf  openarm_single.urdf  openarm_single_control.urdf  openarm_single_no_ee.urdf
src/OpenArm/: .gitignore  CONTRIBUTING.md  README.md
src/OpenArm/.github/: dependabot.yml
src/OpenArm/.github/ISSUE_TEMPLATE/: config.yml
src/OpenArm/.github/workflows/: lint.yaml  preview-comment.yaml  website.yaml
src/OpenArm/website/: .gitignore  README.md  docusaurus.config.ts  eslint.config.mjs  package-lock.json  package.json  sidebars.ts  tsconfig.json
src/OpenArm/website/scripts/: fetch-popular-issues.sh
src/OpenArm/website/static/: robots.txt
src/openarm_can/: CMakeLists.txt  Rakefile
src/openarm_can/python/: meson.build
src/openarm_description/.github/workflows/: release.yaml
src/openarm_description/launch/: display_openarm.launch.py
src/openarm_hardware/.github/ISSUE_TEMPLATE/: 1-bug-report.yml  2-feature-request.yml  config.yml
src/openarm_hardware/.github/workflows/: release.yaml
src/openarm_hardware/STL/covers/: chest-a.STL  chest-b.STL
src/openarm_hardware/STL/follower/: left-jaw.STL  right-jaw.STL
src/openarm_hardware/STL/leader/: left-pincer.STL  rail-connector-leader.STL  right-pincer.STL  swivel-link-leader.STL  swivel-rotor-leader.STL
src/openarm_hardware/STL/wrist-camera-mount/: camera_mount_left.STL  camera_mount_right.STL
src/openarm_hardware/SolidWorks/SLDPRT_Files/: J1_A.SLDPRT  J1_B.SLDPRT  J1_C.SLDPRT  J1_D.SLDPRT  J1_E.SLDPRT  J2_A.SLDPRT  J2_B.SLDPRT  J2_C.SLDPRT  J4_A.SLDPRT  J4_B.SLDPRT  J4_C.SLDPRT  J4_D.SLDPRT  J4_E.SLDPRT  J5_A.SLDPRT  J6_A.SLDPRT  J6_B.SLDPRT  J6_C_left.SLDPRT  J6_C_right.SLDPRT  J6_D.SLDPRT  J7_A.SLDPRT  J7_B.SLDPRT  J7_C.SLDPRT  J7_D_left.SLDPRT  J7_D_right.SLDPRT  J7_E.SLDPRT  (+15 more)
src/openarm_mujoco/v1/: openarm_bimanual.xml
src/openarm_mujoco_hardware/: CMakeLists.txt  README.md  openarm_mujoco_hardware.xml  package.xml
src/openarm_mujoco_hardware/src/: openarm_mujoco_hardware.cpp
src/openarm_mujoco_hardware/test/: test_load_openarm_mujoco_hardware.cpp
src/openarm_ros2/: .clang-format  .gitignore  .pre-commit-config.yaml  README.md
src/openarm_ros2/.docker/: Dockerfile  README.md  ros_entrypoint.sh
src/openarm_ros2/.github/: dependabot.yml
src/openarm_ros2/openarm/: CMakeLists.txt  package.xml
src/openarm_ros2/openarm_bimanual_moveit_config/: .setup_assistant  CMakeLists.txt  README.md  package.xml
src/openarm_ros2/openarm_bimanual_moveit_config/config/: joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  openarm_bimanual.srdf  openarm_bimanual.urdf.xacro  ros2_controllers.yaml
src/openarm_ros2/openarm_bimanual_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
src/openarm_ros2/openarm_bringup/: CMakeLists.txt  README.md  package.xml
src/openarm_ros2/openarm_hardware/: CMakeLists.txt  openarm_hardware.xml  package.xml  setup.bash
src/openarm_ros2/openarm_hardware/include/openarm_hardware/: canbus.hpp  motor.hpp  motor_control.hpp  openarm_hardware.hpp  visibility_control.h
src/openarm_ros2/openarm_hardware/src/: canbus.cpp  motor.cpp  motor_control.cpp  openarm_hardware.cpp
src/openarm_ros2/openarm_hardware/test/: test_openarm_hardware.cpp
(+227 files in other folders)
